<resources>
    <string name="app_name">EasyBudget</string>

    <string name="hello_world">Hello World!</string>
    <string name="hello_emma">Hello Emma!</string>
    <string name="welcome">WELCOME</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_enter_username">Enter your username</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_enter_pwd">Enter your password</string>
    <string name="lbl_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="no_tweet_found">No Tweet Found</string>
    <string name="title_activity_tweet_list">Easy Budget</string>
    <string name="title_activity_tweet_detail">Easy Budget</string>
    <string name="title_activity_tweet_add">Easy Budget</string>
    <string name="add_tittle">Add Tittle</string>
    <string name="add_body">Add Body</string>
    <string name="add_date">Add Date</string>
    <string name="monthName">Add Month Name</string>
    <string name="catName">Add Category Name</string>
    <string name="detName">Add Description</string>
    <string name="detTotal">Add Price</string>
    <string name="detDate">Add Date</string>
    <string name="title_activity_budget">BudgetActivity</string>
    <string name="title_activity_month_add">MonthAddActivity</string>
    <string name="title_activity_month">MonthActivity</string>
    <string name="title_activity_category_add">CategoryAddActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_deails_add">DeailsAddActivity</string>
    <string name="title_activity_description_details">DescriptionDetailsActivity</string>
</resources>
