<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b2b2b2"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/tweetImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/user_profile"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:padding="10dp">

        <EditText
            android:id="@+id/tweetNewTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_tittle"
            android:layout_marginLeft="8dp"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/tweetNewBody"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_body"
            android:layout_marginLeft="8dp"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/tweetNewDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_date"
            android:layout_marginLeft="8dp"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add New Tweet"
            android:id="@+id/addNewTweet"
            android:layout_gravity="right" />
    </LinearLayout>



</LinearLayout>