<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.no_ip.magicperf2.easybudget.DeailsAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:padding="10dp">

        <EditText
            android:id="@+id/descriptionNewName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/detName"
            android:layout_marginLeft="8dp"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/descriptionNewQuantity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/detTotal"
            android:layout_marginLeft="8dp"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/descriptionNewDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/detDate"
            android:layout_marginLeft="8dp"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add New Detail"
            android:id="@+id/addNewDet"
            android:layout_gravity="right" />
    </LinearLayout>

</RelativeLayout>
